# pytest-loco

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pytest_loco/: __init__.py  __main__.py  context.py  errors.py  io.py  jsonschema.py  models.py  names.py  values.py
src/pytest_loco/builtins/: __init__.py  actors.py  checkers.py  instructions.py  lookups.py
src/pytest_loco/core/: __init__.py  builder.py  collector.py  loader.py  parser.py
src/pytest_loco/extensions/: __init__.py  actors.py  checkers.py  contents.py  instructions.py  parameters.py
src/pytest_loco/plugin/: __init__.py  case.py  spec.py
src/pytest_loco/schema/: __init__.py  actions.py  cases.py  checks.py  contents.py  contexts.py  inputs.py  instructions.py
tests/: __init__.py  conftest.py  test_actors.py  test_case.py  test_checkers.py  test_contents.py  test_context.py  test_document.py  test_errors.py  test_inputs.py  test_instructions.py  test_lookups.py  test_models.py  test_providers.py  test_reports.py  test_runners.py  test_schema.py
tests/examples/: __init__.py  contents.py  instructions.py  plugins.py
